--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    const API_KEY = "AIzaSyA-WsM4ELXMv3JQIdJ9cETa9nEQzkn2cQc"; // Replace with your Gemini API Key
+    const API_KEY = "api-key"; // Replace with your Gemini API Key
     const map = L.map('map').setView([20.5937, 78.9629], 5);
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
